assign1/styles/style.css
/* ... */
.principles-item__img {
	text-align: center;
	margin: 0 1.5rem;
}

.principles-item__img img {
	display: inline-block;
	width: 150px;
	height: 150px;
}

.principles-item__desc h2 {
	margin-bottom: 0.5rem;
	text-align: center;
}

.principles-item__desc p {
	letter-spacing: 1px;
}

.office div {
	text-align: center;
}

.office img {
	width: 250px;
	height: 250px;
	margin: 0 2rem 1rem 2rem;
	box-shadow: 2px 5px 8px rgb(0, 0, 0, 0.4);
}

iframe {
	border: 0;
}

.map-container {
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
}

/* #endregion */

/* #region disclaimer.html */

.disclaimer h1 {
	color: rgb(205, 85, 85);
	margin-top: 2rem;
	margin-bottom: 0.5rem;
	display: inline-block;
	border-bottom: 2px solid rgb(205, 85, 85);
}

.disclaimer p {
	line-height: 2rem;
	text-align: justify;
	margin-bottom: 1rem;
	letter-spacing: 1px;
}

/* #endregion */

/* #region enhancements.html */

.enhancements h1 {
	color: rgb(205, 85, 85);
	margin-top: 2rem;
	margin-bottom: 0.5rem;
	display: inline-block;
	border-bottom: 2px solid rgb(205, 85, 85);
}

.enhancements h2 {
	color: rgb(205, 85, 85);
	margin-top: 1.5rem;
	margin-bottom: 0.5rem;
	display: inline-block;
	border-bottom: 2px solid rgb(205, 85, 85);
}

.enhancements p {
	line-height: 2rem;
	text-align: justify;
	margin-bottom: 1rem;
	letter-spacing: 1px;
}

/* #endregion */

/* #region enquiry */

.product-hero--enquiry {
	background-image: url(images/enquiry.jpg);
}

.eform-card {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	margin: 2% 10%;
	height: 875px;
	box-shadow: 2px 5px 8px rgb(0, 0, 0, 0.4);
}

.eform-card h2 {
	color: rgb(205, 85, 85);
}

.personal-info,
.enquiry {
	margin: 3% 5% 3% 5%;
}

.enquiry {
	width: 90%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.personal-info-table,
.address-table,
.enquiry-table {
	text-align: left;
	width: 100%;
	border-collapse: separate;
	border-spacing: 1.25rem 0.75rem;
}

.eform-card input[type="text"],
.eform-card input[type="email"],
.eform-card input[type="tel"],
.eform-card select {
	width: 100%;
	border-radius: 0.1rem;
	padding: 0.15rem;
	outline: none;
	border: 0.1rem solid rgb(255, 255, 255);
	transition: border 0.25s ease;
}

.eform-card input[type="text"]:focus,
.eform-card input[type="email"]:focus,
.eform-card input[type="tel"]:focus {
	border-bottom: 0.1rem solid rgb(42, 52, 67);
}

.enquiry-table textarea {
	width: 100%;
	resize: none;
	outline: none;
	border: 0.2rem solid rgb(255, 255, 255);
}

.personal-info fieldset,
.enquiry fieldset {
	border: none;
}

.personal-info fieldset legend,
.enquiry fieldset legend {
	text-align: left;
}

.submit-reset-container {
	text-align: right;
}

.submit-reset-container input {
	padding: 0.75rem 1rem;
	margin-right: 2%;
	border: none;
	border-radius: 0.2rem;
	color: rgb(239, 246, 242);
	background-color: rgb(133, 138, 155);
	transition: background-color 0.2s ease;
}

.submit-reset-container input:hover {
	color: rgb(239, 246, 242);
	background-color: rgb(42, 52, 67);
}

.submit-reset-container input[type="submit"] {
	margin-right: 5%;
}

/* #endregion */

/* #region about.html */

.member-container {
	width: 75%;
	text-align: center;
	margin: 2% auto;
	padding: 2% 0;
	box-shadow: 2px 5px 8px rgb(0, 0, 0, 0.4);
}

.member-container h1 {
	/* Team member name */
	font-size: 200%; /* font size 200% */
	font-weight: bold; /* bold */
	text-align: center; /* centred */
}

.student-info {
	display: flex;
	width: 85%;
	margin: 1% auto;
}

.student-course {
	/* Team member course */
	color: rgb(205, 85, 85); /* color in rgb() */
}

.student-id {
	/* Team member stud id */
	font-family: Arial, sans-serif; /* Arial font, default sans-serif*/
	margin-left: auto; /* right aligned */
}

.student-img-personal-info {
	width: 85%;
	margin: 0 auto;
}

.student-img-personal-info img {
	/* Team member photo */
	float: left; /* floating */
	border: 1px groove rgb(42, 52, 67); /* groove border */
	padding: 20px; /* padding 20px */
	width: 100%;
}

.personal-info {
	float: left;
	margin: 1rem 0 0 2rem;
}

.contribution-table {
	clear: both;
	margin: 2% 0;
}

.contribution-table h2 {
	text-align: center;
	font-weight: bold;
	margin: 1% 0;
}

.contribution-table table {
	/* contribution table */
	margin: 0 auto; /* centred */
	width: 85%;
	border-collapse: collapse;
	/* cell bg color in hex code*/
}

.contribution-table table tr td,
.contribution-table table tr th {
	padding: 0.2rem 0;
	border-bottom: 2px solid rgb(222, 226, 230);
}

.contribution-table table tr:first-child {
	background-color: rgb(233, 236, 239);
}

.contribution-table table tr:last-child td {
	border: none;
}

.contribution-table table tr td:first-child {
	width: 7%;
}

.contribution-table table tr td:last-child {
	width: 70%;
}

/* #endregion */

/* #region products.html */

.products-hero {
	text-align: center;
	margin-top: 2rem;
}

.products-hero__header {
	font-size: 3rem;
	margin: 0;
	color: rgb(205, 85, 85);
}

.products-hero__check {
	margin: 1rem 0;
}

.products-box {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
	margin-bottom: 2rem;
}

.products-box__item {
	width: 250px;
	margin: 1rem;
	border-radius: 0.5rem;
	box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.016),
		0 22.3px 17.9px rgba(0, 0, 0, 0.024), 0 100px 80px rgba(0, 0, 0, 0.04);
	overflow: hidden;
	transition: box-shadow 0.3s ease;
	text-decoration: none;
	color: inherit;
}

.products-box__item:hover {
	box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
		0 22.3px 17.9px rgba(0, 0, 0, 0.048), 0 100px 80px rgba(0, 0, 0, 0.08);
}

.products-box__item__img {
	object-position: center;
	width: 100%;
	height: 250px;
}

.products-box__item__content {
	margin: 0.8rem;
	margin-bottom: 1.2rem;
}

.products-box__item__content__title {
	font-weight: bold;
	margin-bottom: 0.5rem;
}

.products-box__item__content__desc {
	opacity: 0.7;
}
/* ... */

